--- a/M-Exercices - Codage CSharp Console (TP2)/M-Exercices - Algorithmie - Codage (TP2).csproj
+++ b/M-Exercices - Codage CSharp Console (TP2)/M-Exercices - Algorithmie - Codage (TP2).csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="program.cs" />
+    <Compile Include="TP2équation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
