--- a/M-Exercices - Codage CSharp Console (TP5)/M-Exercices - Algorithmie - Codage (TP5).csproj
+++ b/M-Exercices - Codage CSharp Console (TP5)/M-Exercices - Algorithmie - Codage (TP5).csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="TP5analyse_de_chaine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
