--- a/M-Exercices - Codage CSharp Console (TP6)/M-Exercices - Algorithmie - Codage (TP6).csproj
+++ b/M-Exercices - Codage CSharp Console (TP6)/M-Exercices - Algorithmie - Codage (TP6).csproj
@@ -42,7 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="TP6livraisons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
